styles/header.scss
.header {
    @include defaults;

    display: flex;
    flex-direction: row;

    @media all and (max-width: 520px) {
        flex-direction: column;
        gap: 0.25rem;
    }

    flex-wrap: wrap;
    align-items: flex-start;
    margin-bottom: 0;
    column-gap: 1rem;

    &>#title-block {
        flex: 50%;
    }

    .horizontal-rule {
        margin: 0rem 0 0.5rem 0;
        border: 0;
	    border-top: 1px dotted rgba(0,0,0,.35);
        visibility: visible;
        flex: 0 0 100%;
    }
}

